# xmlrpc-client-requests

./: LICENSE  pyproject.toml
src/xmlrpc_client_requests/: client.py
tests/: test_client.py
